<resources>
    <string name="app_name">GHPlayer</string>

    <!-- Actionbar Drawer Toggle  -->
    <string name="toggle_navigation_view_open">Open</string>
    <string name="toggle_navigation_view_close">Close</string>

    <!-- Menu Navigation View -->
    <string name="menu_navigation_view_item_navigation">Navigation</string>
    <string name="menu_navigation_view_item_tracks">Tracks</string>
    <string name="menu_navigation_view_item_albums">Albums</string>
    <string name="menu_navigation_view_item_artists">Artists</string>
    <string name="menu_navigation_view_item_genres">Genres</string>
    <string name="menu_navigation_view_item_favorites">Favorites</string>

    <!-- Menu Fragment's -->
    <string name="menu_fragments_sorting_title">Sorting</string>
    <string name="menu_fragments_sorting_dialog_button_ascending">Ascending</string>
    <string name="menu_fragments_sorting_dialog_button_descending">Descending</string>

    <!-- Swipe Layout Buttons -->
    <string name="item_track_list_swipe_button_favorites">Favorites</string>
    <string name="item_favorites_track_list_swipe_button_delete">Delete</string>
    <string name="item_track_list_swipe_button_cancel">Cancel</string>

    <!-- Player -->
    <string name="activity_player_duration_track_time_title">Track Time:</string>
    <string name="activity_player_duration_track_elapsed_time_title">Elapsed Time:</string>

    <!-- Menu Dialog TrackList Fragment -->
    <string-array name="menu_fragment_track_list_sorting_dialog">
        <item>Album Name</item>
        <item>Artist Name</item>
        <item>Track Name</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
